--- a/weatherApp/ios/weatherApp/Info.plist
+++ b/weatherApp/ios/weatherApp/Info.plist
@@ -39,6 +39,8 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>날씨 정보를 가져오기 위해서는 위치 정보 권한이 필요하다.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>날씨 정보를 가져오기 위해서는 위치 정보 권한이 필요하다.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
