--- a/weatherApp/package.json
+++ b/weatherApp/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/geolocation": "2.0.2",
     "@types/react": "16.9.34",
     "@types/react-native": "0.62.7",
     "@types/styled-components": "5.1.0",
